# template-rust

./: .gitignore  Cargo.toml  LICENSE  README.md
.devcontainer/: devcontainer.json
.github/workflows/: publish.yml
docs/: _config.yml  index.md
scripts/: pre-push.sh
template/: Cargo.toml  LICENSE-MIT  README.md
template/.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
template/.github/workflows/: main.yml  release.yml  security.yml
template/scripts/: postCreateCommand.sh
